# cloud-savegame

./: .gitignore  .golangci.yml  AGENTS.md  LICENSE  README.md  Taskfile.yml  backup.py  check  demo.cfg  dprint.json  embed.go  go.mod  go.sum  make_release  mise.toml  package.nix  pyproject.toml  test_config.cfg
.github/workflows/: autorelease.yaml  autorelease.yml  release.yml  update-deps.yml
.jules/: CONSISTENTLY_IGNORED.md  janitor.md  sentinel.md
cloud_savegame/: VERSION  __init__.py  config_utils.py  git.py
cloud_savegame/rules/: need-for-speed-most-wanted-2005.txt
cmd/cloud-savegame/: main.go  root.go  root_test.go
internal/backup/: backup.go  backup_test.go  (+1 more)
rules/: 18-wheels-of-steel-haulin.txt  18-wheels-of-steel-pedal-to-the-metal.txt  american-truck-simulator.txt  app-image-glass.txt  app-speedtest-cli.txt  baldurs-gate-3.txt  bully-scholarship-edition.txt  cyberpunk-2077.txt  dead-space-2008.txt  detroit-become-human.txt  dirt-3.txt  emulator-mesen.txt  euro-truck-simulator-2.txt  fallout-new-vegas.txt  farming-simulator-19.txt  farming-simulator-2013.txt  flatout-2.txt  goldberg-steam-emulator.txt  grand-theft-auto-iv.txt  grand-theft-auto-san-andreas.txt  grand-theft-auto-v.txt  grand-theft-auto-vice-city.txt  hacknet.txt  minecraft.txt  need-for-speed-underground-2.txt  poly-bridge.txt  rimworld.txt  scrap-mechanic.txt  starfield.txt  stray.txt  super-tux-kart.txt  the-binding-of-isaac-afterbirth.txt  the-elder-scrolls-v-skyrim-special-edition.txt  watch-dogs-2.txt
tests/: test_config_utils.py  test_git_refactor.py  test_refactor.py
(+13 files in other folders)
