[project]
name = "cloud-savegame"
readme = "README.md"
dynamic = ["version"]

dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.hatch.build.targets.wheel]
packages = ["cloud_savegame"]

[tool.hatch.version]
path = "cloud_savegame/VERSION"
pattern = "^(?P<version>[^$]*)"

[project.scripts]
cloud_savegame = "cloud_savegame:main"
