[project]
name = "cloud-savegame"
readme = "README.md"
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["cloud_savegame"]

[tool.hatch.version]
path = "cloud_savegame/VERSION"
pattern = "^(?P<version>[^$]*)"

[project.scripts]
cloud_savegame = "cloud_savegame:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "I", # isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
